# uart_cl

./: .gitignore  README.md  pyproject.toml
src/uartcl/: __init__.py  cli.py  error_db.py  serial_io.py
src/uartcl/nor/: __init__.py  patcher.py
tests/: __init__.py  test_nor.py
